# RAGScratch

./: .gitignore  docker-clean.sh  docker-down.sh  docker-up.sh  pyproject.toml
docker/: Dockerfile  docker-compose.yml  entrypoint_app.sh
docker/init-db/: 02-tables.sql  03-documents.sql
src/rag_app/: cl_app.py  config.py  debug.py  main.py  models.py
src/rag_app/chat_service/: ChatService.py  chat_service.py
src/rag_app/db/: DatabaseManager.py  database.py  database_manager.py  orm_models.py
src/rag_app/ingestion/: ingestor.py  md_ingestor.py
src/rag_app/ingestion/embedder/: base.py  embedders.py
src/rag_app/ingestion/ingestors/: base.py  md_ingestor.py
src/rag_app/ingestion/model/: models.py
src/rag_app/retrieval/: base.py  retrieval.py
tests/: conftest.py  test_api.py  test_chat_service.py  test_chat_service_tools.py  test_database_manager.py  test_embedders.py  test_ingestor.py  test_md_ingestor.py  test_models.py  test_retriever.py  test_save_embedded_document.py
